--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
   <main>
         <!--Блок Герой-->
     <section class="hero">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+      <div class="container">
+         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button class="hero-btn" type="button">Замовити послугу</button>
+      </div>
+
     </section>
     <!--Особливості студії-->
     <section class="benefits">
